# workspace-setup

./: .editorconfig  Makefile  README.md  require.linux.sh  require.macos.sh  require.sh
ahk/: terminal.windows.ahk
code_editor/vscode/: keybindings.json  settings.json
code_editor/vscode/User/: keybindings.json
code_editor/vscode/User/History/-18c784e5/: Z9Ff.md  entries.json
code_editor/vscode/User/History/-19f24359/: entries.json
code_editor/vscode/User/History/-1d1a5e30/: 5KIo.js  entries.json
code_editor/vscode/User/History/-32e5489f/: entries.json
code_editor/vscode/User/History/-4732cf7f/: 4GFC  XWZH  entries.json
code_editor/vscode/User/History/-4828e2fc/: 4acp  GHBj  V9Pr  entries.json  i4UN  rIVI
code_editor/vscode/User/History/1f17611a/: 1pQ4.json  2Bke.json  2s2a.json  4S5y.json  74PD.json  76bi.json  81h8.json  9G29.json  Boez.json  DzvU.json  ELax.json  EYWw.json  Ed9r.json  FSCa.json  G0w3.json  GMhG.json  Gqoa.json  HrbQ.json  Iva9.json  JlDg.json  K2Jh.json  KXs0.json  OaCW.json  Q64U.json  QsWy.json  RQ9J.json  UOlK.json  UY2e.json  VrCs.json  W7z4.json  WIGR.json  X4Ds.json  bA9B.json  bHjS.json  dZvL.json  eKBA.json  eWoR.json  entries.json  fAco.json  fFvf.json  (+17 more)
code_editor/vscode/User/History/37273ec8/: entries.json
code_editor/vscode/User/History/5be4e81e/: QPeZ.ps1  YDRJ.ps1  ZipV.ps1  entries.json  kFE5.ps1  qOhF.ps1  z3ES.ps1
code_editor/vscode/User/History/78eea99e/: 62gM  entries.json  kuo2  qDFO  vQg3
code_editor/vscode/User/globalStorage/: state.vscdb  state.vscdb.backup  storage.json
code_editor/vscode/User/profiles/5c5599be/: extensions.json
code_editor/vscode/User/profiles/5c5599be/globalStorage/: state.vscdb  state.vscdb.backup
code_editor/vscode/User/profiles/6e16feb/: extensions.json
code_editor/vscode/User/profiles/6e16feb/globalStorage/: state.vscdb  state.vscdb.backup
code_editor/vscode/User/sync/5c5599be/extensions/: lastSyncextensions.json
code_editor/vscode/User/sync/5c5599be/globalState/: lastSyncglobalState.json
code_editor/vscode/User/sync/extensions/: lastSyncextensions.json
code_editor/vscode/User/sync/globalState/: 20240910T122847.json  20240923T114950.json  lastSyncglobalState.json
code_editor/vscode/User/sync/keybindings/: lastSynckeybindings.json
code_editor/vscode/User/sync/profiles/: lastSyncprofiles.json
code_editor/vscode/User/sync/settings/: 20240910T122846.json  lastSyncsettings.json
code_editor/vscode/User/sync/tasks/: lastSynctasks.json
code_editor/vscode/User/workspaceStorage/1727657811095/: state.vscdb  state.vscdb.backup
code_editor/vscode/User/workspaceStorage/1727657836472/: state.vscdb
code_editor/vscode/User/workspaceStorage/1727658045289/: state.vscdb
code_editor/vscode/User/workspaceStorage/1727658055128/: state.vscdb
code_editor/vscode/User/workspaceStorage/1727658168646/: state.vscdb
code_editor/vscode/User/workspaceStorage/4904436503d7a10d2954fc008f5e0045/: state.vscdb.backup  workspace.json
code_editor/vscode/User/workspaceStorage/c1ae69a51bd2fdbb94beb4b2bdade867/: state.vscdb  state.vscdb.backup  workspace.json
container/: podman.linux.sh
containerization/: podman.linux.sh
ide/vscode/: keybindings.json  settings.json
operating_system/linux/: essential.linux.sh
operating_system/linux/apt/: show.apt.installed.py
os/linux/apt/: default_package  show.apt.installed.py
os/windows/: etc.wsl.conf
ssh/: wsl.windows.md
ssh_server/: wsl.window.md  wsl.windows.md
template/: CMakeLists.txt  cmake.auto-reload.sh
template/doc/: CMakeLists.txt
terminal/: .zshrc  Microsoft.Powershell_profile.ps1  analyze.history.md  linux.terminal.custom.sh  linux.terminal.setup.sh  linux.terminal.zsh.sh  unnecessary.linux.sh  windows.terminal.choco.ps1
terminal/tmux/: .tmux.conf  tmux.custom.sh  tmux.linux.install.sh
terminal/tmux/config/: options.conf  theme.conf
terminal/zsh/: .zshrc  zsh.custom.sh  zsh.linux.install.sh
tool/: cmake.linux.sh
vcs/git/: .gitconfig
version_control/git/: .gitconfig  .linux.gitconfig  .windows.gitconfig
(+3 files in other folders)
